fix: broken styles

--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,9 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
 
+#root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
